log/run1/openmpi-1.0-libevent-experiment.err
==> Warning: openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e failed to install
==> Warning: AssertionError exception when releasing read lock for openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e: 
==> Error: openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e: Package was not installed
Making predictions for symbolator
Making predictions for libabigail
Making predictions for actual
==> Error: ProcessError: Command exited with status 1:
    '/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/configure' '--prefix=/p/vast1/build/spack/opt/spack/linux-rhel7-broadwell/gcc-10.2.1/openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e' '--enable-shared' '--disable-silent-rules' '--disable-builtin-atomics' '--enable-static' '--without-pmi' '--without-fca' '--without-openib' '--without-mxm' '--without-xpmem' '--without-ucx' '--without-psm' '--without-cma' '--without-knem' '--without-libfabric' '--without-psm2' '--without-hcoll' '--without-alps' '--without-tm' '--without-lsf' '--without-sge' '--without-loadleveler' '--without-slurm' '--disable-memchecker' '--with-gpfs' '--without-sqlite3' '--disable-wrapper-rpath' '--disable-mpi-cxx' '--disable-cxx-exceptions'

7 errors found in build log:
     2      ==> openmpi: Executing phase: 'configure'
     3      ==> [2022-03-04-03:06:43.995467] '/var/tmp/sochat1/spack-stage/spac
            k-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/conf
            igure' '--prefix=/p/vast1/build/spack/opt/spack/linux-rhel7-broadwe
            ll/gcc-10.2.1/openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e' '--enab
            le-shared' '--disable-silent-rules' '--disable-builtin-atomics' '--
            enable-static' '--without-pmi' '--without-fca' '--without-openib' '
            --without-mxm' '--without-xpmem' '--without-ucx' '--without-psm' '-
            -without-cma' '--without-knem' '--without-libfabric' '--without-psm
            2' '--without-hcoll' '--without-alps' '--without-tm' '--without-lsf
            ' '--without-sge' '--without-loadleveler' '--without-slurm' '--disa
            ble-memchecker' '--with-gpfs' '--without-sqlite3' '--disable-wrappe
            r-rpath' '--disable-mpi-cxx' '--disable-cxx-exceptions'
     4      checking for a BSD-compatible install... /usr/bin/install -c
     5      checking whether build environment is sane... yes
     6      checking for gawk... gawk
     7      checking whether make sets $(MAKE)... yes
  >> 8      configure: error: source directory already configured; run "make di
            stclean" there first
     9      ==> openmpi: Executing phase: 'build'
     10     ==> [2022-03-04-02:33:04.373283] 'make' '-j16' 'V=1'
     11     Making all in config
     12     make[1]: Entering directory `/tmp/sochat1/spack-stage/spack-stage-o
            penmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/config'
     13     make[1]: Nothing to be done for `all'.
     14     make[1]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-op
            enmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/config'

     ...

     406    then mv -f "$depbase.Tpo" "$depbase.Plo"; else rm -f "$depbase.Tpo"
            ; exit 1; fi
     407    mkdir .libs
     408    mkdir .libs
     409    mkdir: cannot create directory '.libs': File exists
     410     /p/vast1/build/spack/lib/spack/env/gcc/gcc -DHAVE_CONFIG_H -I. -I/
            var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplx
            irokndt2snyit3u3e/spack-src/opal/mca/memory/malloc_hooks -I../../..
            /../include -I../../../../include -I/var/tmp/sochat1/spack-stage/sp
            ack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/in
            clude -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cx
            smi6oeplxirokndt2snyit3u3e/spack-src -I../../../.. -I../../../../in
            clude -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cx
            smi6oeplxirokndt2snyit3u3e/spack-src/opal -I/var/tmp/sochat1/spack-
            stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spac
            k-src/orte -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-l
            ju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/ompi -O3 -DNDEBUG -fno-st
            rict-aliasing -pthread -MT memory_malloc_hooks.lo -MD -MP -MF .deps
            /memory_malloc_hooks.Tpo -c memory_malloc_hooks.c  -fPIC -DPIC -o .
            libs/memory_malloc_hooks.o
     411     /p/vast1/build/spack/lib/spack/env/gcc/gcc -DHAVE_CONFIG_H -I. -I/
            var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplx
            irokndt2snyit3u3e/spack-src/opal/mca/memory/malloc_hooks -I../../..
            /../include -I../../../../include -I/var/tmp/sochat1/spack-stage/sp
            ack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/in
            clude -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cx
            smi6oeplxirokndt2snyit3u3e/spack-src -I../../../.. -I../../../../in
            clude -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cx
            smi6oeplxirokndt2snyit3u3e/spack-src/opal -I/var/tmp/sochat1/spack-
            stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spac
            k-src/orte -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-l
            ju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/ompi -O3 -DNDEBUG -fno-st
            rict-aliasing -pthread -MT memory_malloc_hooks_component.lo -MD -MP
             -MF .deps/memory_malloc_hooks_component.Tpo -c memory_malloc_hooks
            _component.c  -fPIC -DPIC -o .libs/memory_malloc_hooks_component.o
  >> 412    memory_malloc_hooks.c:34:8: error: conflicting type qualifiers for 
            '__malloc_initialize_hook'
     413       34 | void (*__malloc_initialize_hook) (void) = opal_memory_mallo
            c_hooks_init;
     414          |        ^~~~~~~~~~~~~~~~~~~~~~~~
     415    In file included from memory_malloc_hooks.c:24:
     416    /usr/include/malloc.h:169:38: note: previous declaration of '__mall
            oc_initialize_hook' was here
     417      169 | extern void (*__MALLOC_HOOK_VOLATILE __malloc_initialize_ho
            ok) (void)
     418          |                                      ^~~~~~~~~~~~~~~~~~~~~~
            ~~

     ...

     486       98 |     __realloc_hook = opal_mem_free_realloc_hook;
     487          |     ^~~~~~~~~~~~~~
     488    In file included from memory_malloc_hooks.c:24:
     489    /usr/include/malloc.h:178:39: note: declared here
     490      178 | extern void *(*__MALLOC_HOOK_VOLATILE __realloc_hook) (void
             *__ptr,
     491          |                                       ^~~~~~~~~~~~~~
  >> 492    make[4]: *** [memory_malloc_hooks.lo] Error 1
     493    make[4]: *** Waiting for unfinished jobs....
     494     /p/vast1/build/spack/lib/spack/env/gcc/gcc -DHAVE_CONFIG_H -I. -I/
            var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplx
            irokndt2snyit3u3e/spack-src/opal/mca/memory/malloc_hooks -I../../..
            /../include -I../../../../include -I/var/tmp/sochat1/spack-stage/sp
            ack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/in
            clude -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cx
            smi6oeplxirokndt2snyit3u3e/spack-src -I../../../.. -I../../../../in
            clude -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cx
            smi6oeplxirokndt2snyit3u3e/spack-src/opal -I/var/tmp/sochat1/spack-
            stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spac
            k-src/orte -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-l
            ju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/ompi -O3 -DNDEBUG -fno-st
            rict-aliasing -pthread -MT memory_malloc_hooks_component.lo -MD -MP
             -MF .deps/memory_malloc_hooks_component.Tpo -c memory_malloc_hooks
            _component.c -o memory_malloc_hooks_component.o >/dev/null 2>&1
     495    make[4]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-op
            enmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/opal/mca/memor
            y/malloc_hooks'
  >> 496    make[3]: *** [all-recursive] Error 1
     497    make[3]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-op
            enmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/opal/mca/memor
            y'
  >> 498    make[2]: *** [all-recursive] Error 1
     499    make[2]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-op
            enmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/opal/mca'
  >> 500    make[1]: *** [all-recursive] Error 1
     501    make[1]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-op
            enmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/opal'
  >> 502    make: *** [all-recursive] Error 1

See build log for details:
  /var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-build-out.txt

Making predictions for spack-test
Making predictions for symbolator
Making predictions for libabigail
abicompat not found on path, will look for spack instead.
Making predictions for actual
